2006-09-11  Lars Clausen  <lars@raeder.dk>

	* lib/diasvgrenderer.c (draw_text_line): First stab at making svg
	text line renderer, doesn't work yet.

	* lib/textline.c (text_line_draw): Removed #define.

	* lib/diagdkrenderer.c (draw_text_line): Slight cleanups.

2006-09-11  Steffen Macke <sdteffen@gmail.com>

	* plug-ins/vdx/vdx-export.c:
	* plug-ins/vdx/vdx-import.c:
	* plug-ins/vdx/vdx-xml.c:
	* plug-ins/vdx/vdx.h:
	* plug-ins/vdx/visio-types.h: Update to version 0.5 (from 0.4) of
	Visio import, thanks to Ian Redfern, who states: 
	
	This is the first version to support export to VDX - for now, just 
	straight lines and text, but I'm working on the more complex bits. 
	It currently writes Visio 2002 VDX as a lowest common denominator, 
	but that won't handle Beziers, so when I get round to converting them 
	to NURBS, only Visio 2003 users will be able to import them.

	There are also several improvements to import, both to fix the layout 
	and clean up the code, and it can now import embedded bitmaps - as Dia
	needs them to be separate files, it puts them in /tmp (or wherever 
	tempnam() goes to on your system). Alternative suggestions are welcome. 
	NURBS import still doesn't work, but everything else seems pretty 
	reliable.
	
	In addition, two small adjustments to compile on Windows

2006-09-08  Steffen Macke <sdteffen@gmail.com>

	* app/makefile.msc:
	* app/Makefile.am:
	* app/dia-win-remote.c:
	* installer/win32/dia.nsi: From Windows Explorer, open .dia files in the 
	running Dia instance (if possible). Fixes bug #70718

2006-09-05  Lars Clausen  <lars@raeder.dk>

	* lib/diatypes.h: 
	* lib/Makefile.am (libdia_la_SOURCES): 
	* lib/diarenderer.[ch]: 
	* lib/font.[ch]: 
	* lib/diagdkrenderer.c: 
	* lib/textline.[ch]: TextLine now ready for commit.  Rendering
	with it is much faster and significantly more precise than
	without.  All renderers should implement a good definitions for
	this (though there is a default one that uses draw_string), as it