@@ -1,3 +1,8 @@
+2006-08-20  Hans Breuer  <hans@breuer.org>
+
+	* plug-ins/python/*.c : don't mix PyObject_NEW() with PyMem_DEL()
+	Newer versions of Python (2.5) are not tolerant about this anymore.
+	
 2006-09-11  Lars Clausen  <lars@raeder.dk>
 
 	* lib/diasvgrenderer.c (draw_text_line): First stab at making svg
